docs/.vitepress/theme/style.css
:root {
  --vp-c-brand: #f56565;
  --vp-c-brand-light: #f67373;
  --vp-c-brand-lighter: #f89191;
  --vp-c-brand-dark: #dc5a5a;
  --vp-c-brand-darker: #c45050;

  --vp-c-brand-1: #f67373;
  --vp-c-brand-2: #ff7070;
  --vp-c-brand-3: #f56565;
  --vp-c-brand-4: #dc5a5a;
  --vp-c-brand-5: #c45050;

  --vp-c-bg-alt-up: #fff;
  --vp-c-bg-alt-down: #fff;

  --vp-code-editor-plain: #24292e;
  --vp-code-editor-comment: #6a737d;
  --vp-code-editor-keyword: #d73a49;
  --vp-code-editor-tag: #22863a;
  --vp-code-editor-punctuation: #24292e;
  --vp-code-editor-definition: #6f42c1;
  --vp-code-editor-property: #005cc5;
  --vp-code-editor-static: #f78c6c;
  --vp-code-editor-string: #032f62;

  --vp-c-text-4: rgba(60, 60, 67, 0.32);
  --vp-home-hero-name-color: var(--vp-c-text);

  --vp-a11y-danger: var(--vp-c-danger-3);
  --vp-a11y-success: var(--vp-c-success-3);
  --vp-a11y-warning: #da9200;

  --vp-sidebar-input: var(--vp-c-gray-3);
}

.dark {
  --vp-c-bg-alt-up: #1b1b1d;
  --vp-c-bg-alt-down: #0f0f10;

  --vp-code-editor-plain: #e1e4e8;
  --vp-code-editor-comment: #6a737d;
  --vp-code-editor-keyword: #f97583;
  --vp-code-editor-tag: #85e89d;
  --vp-code-editor-punctuation: #9ecbff;
  --vp-code-editor-definition: #b392f0;
  --vp-code-editor-property: #79b8ff;
  --vp-code-editor-static: #f78c6c;
  --vp-code-editor-string: #9ecbff;

  --vp-c-text-1: #dfdfd6;
  --vp-c-text-4: rgba(235, 235, 245, 0.16);

  --vp-a11y-danger: var(--vp-c-danger-2);
  --vp-a11y-success: var(--vp-c-success-2);
  --vp-a11y-warning: var(--vp-c-warning-2);

  --vp-sidebar-input: var(--vp-c-bg-soft);
}

@view-transition {
  navigation: auto;
}

/* ::view-transition-old(icons-search-box),
::view-transition-new(icons-search-box) {
  animation: .3s transition 0s ease;
} */

.VPHome {
  overflow-x: hidden;
}

.VPNavBarTitle .logo {
  height: 36px;
  width: 36px;
}

.VPNavBarTitle .title {
  font-size: 21px;
}

.VPHomeHero > .container {
  gap: 24px;
}

.VPHomeHero .image-container {
  transform: none;
  width: 100%;
}

.VPHomeHero .name::first-line {
  color: var(--vp-c-brand);
}

.VPHomeHero .container .image {
  margin: 0;
  order: 2;
  /* margin-top: 32px; */
}

.VPHomeHero .container .image-container {
  height: auto;
  justify-content: flex-end;
}

.VPFeature .icon {
  background-color: var(--vp-c-bg);
}

.vp-doc[class*=' _icons_'] > div {
  max-width: 100%;
}

.VPDoc:has(.vp-doc[class*=' _icons_']) > .container > .content {
  padding-right: 0;
  padding-left: 0;
}

.overview-container.icon-drawer-open {
  padding-bottom: 288px;
}

.VPHomeHero .container {
  flex-direction: column-reverse;
}

@media (min-width: 960px) {
  .VPHomeHero .container .image {
    order: 1;
    margin-bottom: auto;
    margin-top: 0;
    position: relative;
  }

  .VPHomeHero .container .main {
    width: 50%;
  }

  .VPHomeHero .container .image {
    width: 50%;
  }

  .VPHomeHero .container .image-container {
    display: block;
  }

  .VPHomeHero .container {
    flex-direction: row;
  }

  html.has-bb-banner {
    --vp-layout-top-height: 72px;
  }

  html.has-bb-banner {
    --Dark-Background: #161618;
  }
}

.VPNavBarHamburger .container > span {
  border-radius: 2px;
}

.package-lucide-logo {
  margin: 0 auto 48px;
  max-width: 480px;
}

html:not(.has-bb-banner) #bb-banner {
  display: none !important;
  visibility: hidden !important;
  pointer-events: none !important;
}

.VPSidebar {
  /* Hide Scrollbar */
  -ms-overflow-style: none;
  scrollbar-width: none;
  scrollbar-width: thin; /* can also be normal, or none, to not render scrollbar */
  scrollbar-color: var(--vp-c-text-4) transparent; /* foreground background */
}
.VPSidebar::-webkit-scrollbar {
  width: 0;
  display: none;
}

.VPSidebar::-webkit-scrollbar-track {
  background: transparent;
}

.VPSidebar::-webkit-scrollbar-thumb {
  background: transparent;
  border: none;
}

